Made component state license aware; introduced new license info API
See merge request search-guard/search-guard-suite-enterprise!183